# boardx

./: Cargo.toml  README.md
src/: app.rs  lib.rs  main.rs  persistor.rs  state.rs  test.rs  view.rs
src/demo/: mod.rs  text_edit.rs
